Docs CSS updates.

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 	</head>
 	<body>
 		<main>
-			<h3>Introducing Q.js</h3>
+			<h3>Hello, I’m Q</h3>
 			<p>
 				Q is quantum computing in your browser.
 				Or a <em>simulation</em> of it anyway—after all, you cannot do actual quantum physics on a classical computer!
@@ -151,6 +151,15 @@ Q.<a href="Gate.html">Gate</a>.HADAMARD
 	.toString()
 			</pre></code>
 			<br>
+			<h3>Code style</h3>
+			<p>
+				You’ll notice that Q is quite verbose, heavily commented, and there’s an emphasis on teaching.
+				I’m trying to convey the knowledge I’ve picked up.
+				Also there’s a lot of whitespace. You’ve got to let your code breathe!
+				See the variables. Allow for visual hierarchy in code by grouping things together, or spacing them apart.
+				And no semicolons unless necessary!
+				They’re just visual clutter otherwise.
+			</p>
 			<h3>Roadmap</h3>
 			<p>
 				Q is very much a work-in-progress.
