Key commands table.

--- a/index.html
+++ b/index.html
@@ -87,14 +87,20 @@
 						Firefox
 					</a></td>
 					<td>
-						Option<br>
-						Command<br>
-						<strong>K</strong>
+						<span class="key">⌥</span><span class="key">⌘</span><span class="key">K</span><br>
+						<small>
+							Option
+							Command
+							<strong>K</strong>
+						</small>
 					</td>
 					<td>
-						Control<br>
-						Shift<br>
-						<strong>K</strong>
+						<span class="key">⌃</span><span class="key">⇧</span><span class="key">K</span><br>
+						<small>
+							Control
+							Shift
+							<strong>K</strong>
+						</small>
 					</td>
 				</tr>
 				<tr>
@@ -102,14 +108,20 @@
 						Chrome
 					</a></td>
 					<td>
-						Option<br>
-						Command<br>
-						<strong>J</strong>
+						<span class="key">⌥</span><span class="key">⌘</span><span class="key">I</span><br>
+						<small>
+							Option
+							Command
+							<strong>I</strong>
+						</small>
 					</td>
 					<td>
-						Control<br>
-						Shift<br>
-						<strong>I</strong>
+						<span class="key">⌃</span><span class="key">⇧</span><span class="key">I</span><br>
+						<small>
+							Control
+							Shift
+							<strong>I</strong>
+						</small>
 					</td>
 				</tr>
 				<tr>
@@ -117,9 +129,12 @@
 						Safari
 					</a></td>
 					<td>
-						Option<br>
-						Command<br>
-						<strong>C</strong>
+						<span class="key">⌥</span><span class="key">⌘</span><span class="key">C</span><br>
+						<small>
+							Option
+							Command
+							<strong>C</strong>
+						</small>
 					</td>
 					<td>×</td>
 				</tr>
@@ -128,7 +143,7 @@
 						Edge
 					</a></td>
 					<td>×</td>
-					<td>F12</td>
+					<td><span class="key"><small>F12</small></span></td>
 				</tr>
 			</table>
 			<h3>Getting started</h3>
