Real genius coin flip.

--- a/index.html
+++ b/index.html
@@ -253,8 +253,9 @@ Q.<a href="Gate.html">Gate</a>.HADAMARD
 			</pre></code>
 			<p>
 				You just performed the most superfluous coin flip ever!
-				Each time you run the above code there’s a 50% chance of receiving a zero (heads),
-				and a 50% chance of receiving a one (tails).
+				Each time you run the above code there’s a 50% chance of receiving a 
+				<code>"0"</code>—let’s call that heads—and a 50% chance of receiving a 
+				<code>"1"</code>—and we’ll call that tails.
 				Go ahead and try it out.
 			</p>
 			<p>
