Console commands style updates.

--- a/index.html
+++ b/index.html
@@ -88,7 +88,6 @@
 			C398.276,93.393,410.968,61.617,407.505,30c-27.181,1.092-60.05,18.113-79.547,40.927c-17.473,20.202-32.775,52.538-28.646,83.529
 			C329.609,156.8,360.56,139.06,379.418,116.219"/>
 						</svg>
-						<br>
 						<a target="_blank" href="https://www.apple.com/macos">macOS</a>
 					</td>
 					<td>
@@ -102,7 +101,6 @@
 	<path id="path31" d="M282.104,311.467c75.805,0,151.563,0,227.32,0c0.096,66.162,0,132.323,0,198.533
 		c-75.565-11.323-151.275-21.83-226.984-32.097C282.344,422.44,282.2,366.977,282.104,311.467z"/>
 						</svg>
-						<br>
 						<a target="_blank" href="https://www.microsoft.com/en-us/windows">Windows</a>
 					</td>
 				</tr>
@@ -135,7 +133,6 @@
 		c48.792,84.105,123.791,126.574,206.689,133.091c14.75,1.217,29.709,1.243,44.756,0.097c1.348-0.096,2.695-0.195,4.045-0.308
 		c16.991-1.192,34.096-3.758,51.163-7.881C605.418,506.364,580.058,224.73,580.058,224.73z"/>
 						</svg>
-						<br>
 						<a target="_blank" href="https://www.mozilla.org/firefox/">Firefox</a>
 					</td>
 					<td>
@@ -169,7 +166,6 @@
 								c38.159-66.092,16.302-150.366-48.66-189.716L541.934,180.068z"/>
 							<circle display="inline" cx="300" cy="300" r="120"/>
 						</svg>
-						<br>
 						<a target="_blank" href="https://www.google.com/chrome/">Chrome</a>
 					</td>
 					<td>
@@ -195,7 +191,6 @@
 							<path d="M300,30C150.883,30,30,150.883,30,300s120.883,270,270,270s270-120.883,270-270S449.117,30,300,30z M330.797,329.109
 		L131.672,470.648l139.852-199.758l199.125-141.539L330.797,329.109z"/>
 						</svg>
-						<br>
 						<a target="_blank" href="https://www.apple.com/safari/">Safari</a>
 					</td>
 					<td>
@@ -206,7 +201,7 @@
 							<strong>C</strong>
 						</small>
 					</td>
-					<td>×</td>
+					<td class="na">×</td>
 				</tr>
 				<tr>
 					<td>
@@ -229,10 +224,9 @@
 								c20.335,15.966,37.394,34.116,51.259,54.872s24.369,43.696,31.595,68.653c7.227,24.957,10.924,50.922,10.924,77.896v66.804
 								L206.348,350.418L206.348,350.418z"/>
 						</svg>
-						<br>
 						<a target="_blank" href="https://www.microsoft.com/windows/microsoft-edge">Edge</a>
 					</td>
-					<td>×</td>
+					<td class="na">×</td>
 					<td><span class="key"><small>F12</small></span></td>
 				</tr>
 			</table>
