Minor docs updates.

--- a/ComplexNumber.html
+++ b/ComplexNumber.html
@@ -13,15 +13,17 @@
 	</head>
 	<body>
 		<main>
-			<h3>Imaginary numbers</h3>
 			<p>
-				Our <code>ComplexNumber</code> class allows us to compute using the imaginary number 𝒊.
+				Q’s <code>ComplexNumber</code> class allows us to compute using the imaginary number 𝒊.
 				Has it been a while since you last dealt with imaginary numbers? 
 				Was that in high school?
 				Or maybe never?
 				Let’s back up a second.
+			</p>
+			<h3>Real numbers: ℝ</h3>
+			<p>
 				Regular, ordinary numbers are called
-				<a href="https://en.wikipedia.org/wiki/Real_number" target="_blank">real numbers (ℝ)</a>
+				<a href="https://en.wikipedia.org/wiki/Real_number" target="_blank">real numbers</a>
 				and exist along an infinite number line—with zero in the middle, negative numbers to the left, and positive to the right:
 			</p>
 <pre><code>
@@ -30,6 +32,8 @@
                      √2    𝒆 π  
 
 </pre></code>
+			<br>
+			<h3>Imaginary numbers: 𝕀</h3>
 			<p>
 				Now let’s consider the imaginary number named 𝒊. 
 				What makes 𝒊 imaginary? 
@@ -81,7 +85,7 @@
 
 			<p>
 				Our result, 7𝒊, is an
-				<a href="https://en.wikipedia.org/wiki/Imaginary_number" target="_blank">imaginary number (𝕀)</a>
+				<a href="https://en.wikipedia.org/wiki/Imaginary_number" target="_blank">imaginary number</a>
 				that consists of a real number multiplier, 7, and 
 				our special imaginary number 𝒊.
 				Imaginary numbers also exist along an infinite number line—with zero in the middle, negative numbers to the left, and positive to the right:
@@ -92,13 +96,13 @@
 
 </pre></code>
 			<br>
-			<h3>Complex numbers</h3>
+			<h3>Complex numbers: ℂ</h3>
 			<p>
 				We just saw that multiplying a real number (ℝ) by the imaginary number 𝒊
 				yields a number that is also imaginary (𝕀).
 				But what if you add a real number to an imaginary one?
 				Things get <em>complex</em>.
-				A <a href="https://en.wikipedia.org/wiki/Complex_number" target="_blank">complex number (ℂ)</a>
+				A <a href="https://en.wikipedia.org/wiki/Complex_number" target="_blank">complex number</a>
 				is a number that can be expressed in the form 
 				𝒂 + 𝒃𝒊, where 𝒂 is the real component (ℝ) and 𝒃𝒊 is the imaginary 
 				component (𝕀). 
