--- a/index.html
+++ b/index.html
@@ -272,6 +272,12 @@ Q.<a href="Gate.html">Gate</a>.HADAMARD
 				Some ES6 syntax is preferred, but the bits that disfigure JavaScript to look more like Java are weeded out, bagged, and tossed in the river.
 				Let JavaScript be JavaScript.
 			</p>
+			<p>
+				While Q’s internal code uses <code>let</code> and <code>const</code> when declaring variables,
+				the examples here often use <code>var</code> instead.  
+				This to make freeform experimenting in the console a bit friendlier;
+				redeclare and overwrite variables to your heart’s content.
+			</p>
 			<h3>Roadmap</h3>
 			<p>
 				This is a work-in-progress.
