Q base refactor, hash ID links.

--- a/ComplexNumber.html
+++ b/ComplexNumber.html
@@ -20,7 +20,7 @@
 				Or maybe never?
 				Let’s back up a second.
 			</p>
-			<h3>Real numbers: ℝ</h3>
+			<h3 id="Real_numbers">Real numbers: ℝ</h3>
 			<p>
 				Regular, ordinary numbers are called
 				<a href="https://en.wikipedia.org/wiki/Real_number" target="_blank">real numbers</a>
@@ -32,8 +32,7 @@
                      √2    𝒆 π  
 
 </pre></code>
-			<br>
-			<h3>Imaginary numbers: 𝕀</h3>
+			<h3 id="Imaginary_numbers">Imaginary numbers: 𝕀</h3>
 			<p>
 				Now let’s consider the imaginary number named 𝒊. 
 				What makes 𝒊 imaginary? 
@@ -95,8 +94,7 @@
 ┄───┴───┴───┴───┴───┴───┴───┴───┄  
 
 </pre></code>
-			<br>
-			<h3>Complex numbers: ℂ</h3>
+			<h3 id="Complex_numbers">Complex numbers: ℂ</h3>
 			<p>
 				We just saw that multiplying a real number (ℝ) by the imaginary number 𝒊
 				yields a number that is also imaginary (𝕀).
@@ -141,7 +139,7 @@ b = new Q.ComplexNumber( 3, -4 )
 				arguments both sibling instances and pure <code>Number</code> instances, though the 
 				value returned is always an instance of <code>Q.ComplexNumber</code>.
 			</p>
-			<h3>Reduction</h3>
+			<h3 id="Reduction">Reduction</h3>
 			<p>
 				We can check that 𝒊² = -1.
 			</p>
@@ -152,9 +150,12 @@ ii = i.multiply( i )
 '𝒊  = '+ i.toString()
 '𝒊² = '+ i.multiply( i ).toString()
 
-</pre></code>		
-		
-			<br>
+</pre></code>
+			<hr>
+			<h3>Constants</h3>
+			<p>
+				TK
+			</p>
 			<h3>Class methods</h3>
 			<p>
 				TK
