--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
 					<td><span class="key"><small>F12</small></span></td>
 				</tr>
 			</table>
-			<h3>My first superposition</h3>
+			<h3 id="My_first_superposition">My first superposition</h3>
 			<p>
 				Have you opened up your browser’s JavaScript console yet? 
 				(See above.)
@@ -259,11 +259,11 @@ Q.<a href="Gate.html">Gate</a>.HADAMARD
 				yet you’re already doing quantum computation.
 				You must be a genius!
 			</p>		
-			<h3>Style</h3>
+			<h3 id="Style">Style</h3>
 			<p>
 				Q’s source code is verbose, heavily commented, and there’s great empathy for fellow learners.
 				<a href="https://en.wikipedia.org/wiki/Visual_hierarchy" target="_blank">Visual hierarchy</a> is key when facing a brick of monospace code gibberish. 
-				<a href="https://en.wikipedia.org/wiki/White_space_(visual_arts)" target="_blank">White space</a> helps; whitespace around variables, between conceptually different blocks of code.
+				<a href="https://en.wikipedia.org/wiki/White_space_(visual_arts)" target="_blank">White space</a> helps; white space around variables, between conceptually different blocks of code.
 				(You’ve got to let code breathe.)
 				Semicolons as line-enders are avoided unless absolutely necessary. 
 				(They’re just visual clutter otherwise; <a href="https://en.wikipedia.org/wiki/Typography" target="_blank">typographic</a> noise in the signal.)
@@ -278,7 +278,7 @@ Q.<a href="Gate.html">Gate</a>.HADAMARD
 				This to make freeform experimenting in the console a bit friendlier;
 				redeclare and overwrite variables to your heart’s content.
 			</p>
-			<h3>Roadmap</h3>
+			<h3 id="Roadmap">Roadmap</h3>
 			<p>
 				This is a work-in-progress.
 				Currently the computation relies on matrix math,
