The joy of floating point.

--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@ Q.<a href="Gate.html">Gate</a>.HADAMARD
 			<p>
 				While Q’s internal code uses <code>let</code> and <code>const</code> when declaring variables,
 				the examples here often use <code>var</code> instead.  
-				This to make freeform experimenting in the console a bit friendlier;
+				This is to make free-form experimenting in the console a bit friendlier;
 				redeclare and overwrite variables to your heart’s content.
 			</p>
 			<h3 id="Roadmap">Roadmap</h3>
