--- a/Gate.html
+++ b/Gate.html
@@ -15,5 +15,12 @@
 		<main>
 			Documentation TK!
 		</main>
+		<script>
+			
+console.log( '\n\nQ.Gate\n', Q.Gate.help(), '\n\n' )
+
+console.log( '\n\nCONSTANTS:\n', Q.Gate.constants, '\n\n' )
+
+		</script>
 	</body>
 </html>
