--- a/Matrix.html
+++ b/Matrix.html
@@ -47,7 +47,7 @@ const ourMatrix = new Q.Matrix(
 
 //  First, what do the docs have to say?
 
-console.log( '\n\nQ.Matrix\n', Q.extractDocumentation( Q.Matrix ), '\n\n' )
+console.log( '\n\nQ.Matrix\n', Q.Matrix.help(), '\n\n' )
 
 
 //  We’re going to use `var` here instead of `let` or `const`
