--- a/Qubit.html
+++ b/Qubit.html
@@ -92,7 +92,7 @@ LEFT_HAND_CIRCULAR_POLARIZED  = new Q.Qubit( 1÷√2,  1÷√2𝒊 )
 
 //  First, what do the docs have to say?
 
-console.log( '\n\nQ.Qubit\n', Q.extractDocumentation( Q.Qubit ), '\n\n' )
+console.log( '\n\nQ.Qubit\n', Q.Qubit.help(), '\n\n' )
 
 
 
