Prepping for circuits.

--- a/Qubit.html
+++ b/Qubit.html
@@ -8,6 +8,8 @@
 		<script src="Q/ComplexNumber.js"></script>
 		<script src="Q/Matrix.js"></script>
 		<script src="Q/Qubit.js"></script>
+		<script src="Q/Gate.js"></script>
+		<script src="Q/Circuit.js"></script>
 		<script src="Assets/navigation.js"></script>
 	</head>
 	<body>
