--- a/Qubit.html
+++ b/Qubit.html
@@ -19,8 +19,8 @@
 				is represented by 
 				<code>Q.<a href="Matrix.html">Matrix</a>([ 𝒂 ],[ 𝒃 ])</code>
 				where 𝒂 and 𝒃 are “complex 
-				numbers” such that 𝒂 × 𝒂 + 𝒃 × 𝒃 = 1. If brevity’s your thing, that’s the 
-				same as 𝒂² + 𝒃² = 1. 
+				numbers” such that |𝒂| × |𝒂| + |𝒃| × |𝒃| = 1. If brevity’s your thing, that’s the 
+				same as |𝒂|² + |𝒃|² = 1. 
 			</p>
 			<pre><code>
 const ourQubit = new Q.Qubit( 0, 1 )
@@ -46,7 +46,7 @@ const ourQubit = new Q.Qubit( 0, 1 )
 			<p>
 				If we plot all of the possible values for 𝒂 and 𝒃 on a standard graph 
 				it will create a circle with a radius of 1 centered at the origin (0, 0); 
-				ie. a <a href="https://en.wikipedia.org/wiki/Unit_circle)" target="_blank">unit circle</a>. This is the result of our rule that 𝒂² + 𝒃² = 1. 
+				ie. a <a href="https://en.wikipedia.org/wiki/Unit_circle)" target="_blank">unit circle</a>. This is the result of our rule that |𝒂|² + |𝒃|² = 1. 
 			</p>
 
 
